collapses on location page css fixed

--- a/src/style/components/collapse.scss
+++ b/src/style/components/collapse.scss
@@ -9,7 +9,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 1.3em;
 
   & .header {
     box-sizing: border-box;
