--- a/src/style/pages/locations.scss
+++ b/src/style/pages/locations.scss
@@ -1,6 +1,15 @@
 @import '../variables.scss';
 @import '../mixins.scss';
 
+#collapses_host_page{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  grid-column: 1/3;
+  @media screen and (max-width:768px) {
+    flex-direction: column;
+  }
+}
 .location__main--wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
